fix navigation on mobile

--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -1,3 +1,13 @@
+@import "App.scss";
+
+.fadeIn {
+  transition: color 1s;
+}
+
+.fadeIn:hover {
+  color: map-get($theme-colors, "primary") !important;
+}
+
 .title {
   font-family: "Days One", sans-serif;
 }
